# mar24cmlops_rakuten

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.train  Dockerfile_perso  README.md  docker-compose.yaml  docker-compose_ancien.yaml  erreur.txt  import_json.py  param_file.json  pyproject.toml  requirements-dev.lock.v  requirements.txt  rye-env.sh  test.py  test13062024A.py  test_api.py
.aws/: .aws_config.ini  .encrypted  task-definition.json
.envp/: README.md
.github/workflows/: api_testing.yml  dev-aws-deploy.yml
airflow/dags/: dag.py  model_evaluate_and_retrain_dag.py  sim_dag.py
dags/: my_dag1.py
data/: README.md  rakuten_db.duckdb.wal
data/tmp/: README.md
logs/: .gitignore
mlflow/mlruns/0/: meta.yaml
mlruns/0/: meta.yaml
mlruns/982923443107143780/: meta.yaml
mlruns/982923443107143780/3222c0c8758349119e207f8cfcb0b611/: meta.yaml
mlruns/982923443107143780/8e5ef85b204a4d71bb1465441b8fa24f/: meta.yaml
mlruns/982923443107143780/9f58ccfb7e184b20a49ac91d5d315951/: meta.yaml
models/: .gitignore  README.md  model_list.txt
models/production_model/: README.md
models/staging_models/: README.md
src/: erreur.txt  estimation.txt  init_dataset.py  prediction.py  pyproject.toml  sortie_standard.txt  test_duckdb.py
src/api/: comparison_decision.py  fastapi_main.py  fastapi_main13A.py  fastapi_main_test.py  fastapi_main_test1.py  init_db.py  initialisation.py  model_send.py  modif_db.py  prediction.py  prediction12.py  prediction_v.py  predictions.py  production_model_1.py  retrain.py  retrain1.py  retrain2.py  retrain3.py  retrain3mlflow.py  tentative.py  test_airflow.py  test_db.py  test_fastapi_main.py  test_retrain.py  test_retrain_mlflow.py  test_retrain_mlflow_alt.py  test_travail.py  test_travail2.py  test_travail3.py  travail.py  travail2.py
src/api/aws_utils/: make_db.py  s3_utils.py  security.py  test.py
src/api/models/: predict.py
src/api/utils/: get_models.py  make_db.py  metrics.py  predict.py  resolve_path.py  s3_utils.py  security.py  tf_trimodel_travail.py  tf_trimodel_travail_B.py  write_logs.py
src/mlprojects/: README.md
src/mlprojects/production/: model.py  production_model.py  pt_model.py  pt_model_predict.py  retrain3mlflow.py  tf_model.py  tf_model_predict.py  tf_trimodel.py  tf_trimodel_extended.py
src/mlprojects/staging/: staging_model_1.py  tf_trimodel.py
src/test_api/: test_fastapi_main.py
src/test_api/utils/: test_get_models.py  test_make_db.py  (+2 more)
src/train_model/: main.py  predict1.py  prediction.py
src/train_model_legacy/: main.py  predict.py
src/visualization/: test.py
(+37 files in other folders)
